option java_package = "ralph_version_protobuffs";
option java_outer_classname = "SingleDeviceUpdateListProto";

import "singleDeviceUpdate.proto";

message SingleDeviceUpdateListMessage
{
    required string device_id = 1;
    // stored in order of increasing root commit lamport time.
    repeated SingleDeviceUpdateMessage update_list = 2;
}