option java_package = "ralph_version_protobuffs";
option java_outer_classname = "VersionMessageProto";

import "versionRequest.proto";
import "versionResponse.proto";

message VersionMessage
{
    required uint64 timestamp = 1;
    optional VersionRequestMessage request = 2;
    optional VersionResponseMessage response = 3;
}
