option java_package = "ralph_version_protobuffs";
option java_outer_classname = "VersionRequestProto";

import "util.proto";

message VersionRequestMessage
{
    required uint64 query_id = 1;
    
    // if empty, query over all devices
    repeated string device_id_list = 2;

    // The following fields are optional. If they do not exist, do not
    // use them as filters when generating responses.  Eg., if
    // lower_root_commit_lamport_time and
    // upper_root_commit_lamport_time are 1 and 3, then only return
    // updates that happened with a root commit lamport time of 1, 2,
    // or 3.  However, if they're unspecified, return all updates at
    // any time (unless some other filter is set).
    optional uint64 lower_root_commit_lamport_time = 3;
    optional uint64 upper_root_commit_lamport_time = 4;

    optional uint64 lower_local_lamport_time = 5;
    optional uint64 upper_local_lamport_time = 6;
    
    optional UUID root_application_uuid = 7;
    optional string event_name = 8;
    optional UUID event_uuid = 9;
}
