option java_package = "ralph_version_protobuffs";
option java_outer_classname = "VersionResponseProto";

import "singleDeviceUpdateList.proto";

message VersionResponseMessage
{
    // identifier so that other side knows which query this is a
    // response to.
    required uint64 query_id = 1;
    repeated SingleDeviceUpdateListMessage device_list = 2;
}